          Release Notes for NEdit Version 5.5, October 2004


$Id: ReleaseNotes,v 1.28 2004/09/30 20:51:05 n8gray Exp $

This file contains last minute notes to users about the release, which are not
included in the documentation or README files included with the distribution
kits.  It also contains change information, for users who are interested in
what bugs have been fixed, and what features have been added in the current
version.

If you are upgrading NEdit from a version prior to 5.0, please see the notes in
the README file which came with the (source or executable) distribution kit,
about updating macros and font settings in your .nedit file.

New features in 5.5 

  - The most important new feature is the introduction of window tabs
    (SF patches #569287 and #893177).
    
  - More efficient string search operations for the macro language.
  
  - Auto-scrolling is now (partly) configurable through the preference menu.
        
  - Find and Clear buttons for i-search bar (SF patch #891884).
  
  - Faster user-defined menu creation (SF patch #891126).
  
  - Open documents on current desktop (SF patch #963120)
  
  - Superuser receives a warning when trying to overwrite a read-only file.
  
  - Simplified global font resources.
  
  - Macro language: added new $args[] array and removed 9 arguments limit 
    for macros
    
  - Improved Latex & Python syntax highlighting patterns
  
Bugs fixed in 5.5

  - If underscore (_) is among the word delimiters for a language mode then
    word boundary regexes will work as expected.  (SF bug #1008656)

  - Problem with writing history file on VMS (SF bug #933146).
  
  - Race condition fix for running NEdit in -sync mode (SF bug #978104).
  
  - Removed obsolete special window title treatment on SGI (SF bug #779454).
  
  - Forbid the deletion of the "Plain" Text Drawing Style (SF patch #970491).
  
  - File descriptor handling fix that allows shell commands to be invoked 
    asynchronously. 
    