@@ -1,7 +1,7 @@
           Release Notes for NEdit Version 5.5, October 2004
 
 
-$Id: ReleaseNotes,v 1.28 2004/09/30 20:51:05 n8gray Exp $
+$Id: ReleaseNotes,v 1.29 2004/10/08 21:55:51 yooden Exp $
 
 This file contains last minute notes to users about the release, which are not
 included in the documentation or README files included with the distribution
@@ -12,6 +12,12 @@ version.
 If you are upgrading NEdit from a version prior to 5.0, please see the notes in
 the README file which came with the (source or executable) distribution kit,
 about updating macros and font settings in your .nedit file.
+
+Bugs fixed in $NEXT_VERSION
+
+  - The text insertion cursor does no longer blink while typing
+    (SF bug #906878).
+
 
 New features in 5.5 
 
